# simple-rust-query-engine

./: Cargo.toml  Makefile  README.md
examples/: csv_sql.rs  dataframe_expr.rs  dataframe_join_expr.rs
src/: context.rs  dataframe.rs  error.rs  lib.rs  utils.rs
src/execution/: context.rs  dataframe.rs  mod.rs
src/expression/: coercion.rs  mod.rs  operator.rs  scalar.rs  values.rs
src/expression/logical/: aggregate.rs  binary.rs  column.rs  expr.rs  expr_fn.rs  mod.rs  sort.rs
src/expression/physical/: binary.rs  column.rs  expr.rs  literal.rs  mod.rs  sort.rs
src/expression/physical/aggregate/: average.rs  count.rs  min_max.rs  mod.rs  sum.rs
src/io/: mod.rs
src/io/reader/: csv.rs  mod.rs
src/io/reader/csv/: mod.rs  opener.rs  options.rs  source.rs
src/io/reader/listing/: table.rs
src/optimize/: optimizer.rs
src/optimize/rules/: mod.rs  predicate_pushdown.rs  predicate_pushdown_new.rs  projection_pushdown.rs  rewrite_distinct.rs  utils.rs
src/plan/: planner.rs
src/plan/logical/: aggregate.rs  distinct.rs  filter.rs  join.rs  limit.rs  mod.rs  plan.rs  plans.rs  projection.rs  scan.rs  sort.rs
src/plan/physical/: aggregate.rs  filter.rs  limit.rs  mod.rs  plan.rs  planner.rs  projection.rs  sort.rs
src/plan/physical/aggregate/: group_values.rs  hash.rs  mod.rs  no_groups.rs  row_hash.rs
src/plan/physical/joins/: hash_join.rs  mod.rs  nested_loop_join.rs  (+1 more)
src/sql/: expr.rs  join.rs  mod.rs  parser.rs  select.rs  visitor.rs
testdata/csv/: distinct.csv  join_left.csv  join_left_2.csv  join_right.csv  simple.csv  simple_aggregate.csv
(+6 files in other folders)
