[package]
name = "simple-rust-query-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
arrow = { version = "52.2.0", features = ["prettyprint"] }
arrow-schema = "52.2.0"
arrow-array = "52.2.0"
async-stream = "0.3.5"
futures = "0.3.30"
futures-util = "0.3.30"
snafu = "0.8.4"
tokio = { version = "1.39.2", features = ["full"] }
half = "2.4.1"
