[package]
name = "simple-rust-query-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
arrow = { version = "52.2.0", features = ["prettyprint"] }
arrow-schema = "52.2.0"
arrow-select = "52.2.0"
arrow-array = "52.2.0"
async-stream = "0.3.5"
futures = "0.3.30"
futures-util = "0.3.30"
itertools = "0.13.0"
snafu = "0.8.4"
tokio = { version = "1.39.2", features = ["full"] }
half = "2.4.1"
sqlparser = { version = "0.50.0", features = ["visitor"] }
